<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_sort_default">random</string>
    <string name="pref_sort_key">Sort</string>
    <string name="pref_sort_title">Sorting Movies</string>

    <string-array name="pref_sort_options">
        <item>Rating</item>
        <item>Popularity</item>
        <item>Random</item>
    </string-array>
    <string-array name="pref_sort_values">
        <item>rating</item>
        <item>popularity</item>
        <item>random</item>
    </string-array>



    <string name="pref_page_label" translatable="false">Number Of Pages</string>
    <string name="pref_page_key" translatable="false">pages</string>
    <string name="pref_page_default" translatable="false">2</string>

</resources>
