<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_page_default"
        android:title="@string/pref_page_label"
        android:inputType="text"
        android:singleLine="true"
        android:key="@string/pref_page_key"
        android:summary="Each Page contain 20 Movies"
        android:dialogTitle="Each Page contain 20 Movies"
        android:hint="No of Pages" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_sort_default"
        android:entries="@array/pref_sort_options"
        android:entryValues="@array/pref_sort_values"
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_title" />



</PreferenceScreen>
